# grassmann

./: Cargo.toml  main.ts  package.json  tsconfig.json  webpack.config.js  worker.ts
src/: core.rs  functions.rs  lib.rs  main.rs  tests.rs  utils.rs  workers.rs
src/core/: assemble.rs  cholesky.rs  conjugate.rs  copy_to_f64.rs  eig.rs  from_basis.rs  from_sab_f64.rs  id.rs  init_const.rs  into_basis.rs  into_sab.rs  inv.rs  inv_diag.rs  inv_lower_triangular.rs  inv_upper_triangular.rs  is_diag.rs  is_diagonally_dominant.rs  is_identity.rs  is_lower_triangular.rs  is_permutation.rs  is_symmetric.rs  is_upper_triangular.rs  lps.rs  lu.rs  matrix.rs  matrix2.rs  matrix3.rs  matrix4.rs  multiply.rs  partition.rs  perm.rs  qr.rs  rand_perm.rs  rank.rs  schur_complement.rs  solve.rs  strassen.rs  svd.rs  transfer_into_sab.rs  transpose.rs  (+5 more)
src/functions/: assemble.rs  augment_sq2n.rs  augment_sq2n_size.rs  cholesky.rs  conjugate.rs  copy_to_f32.rs  copy_to_f64.rs  copy_to_i32.rs  depth.rs  eig.rs  exchange_columns.rs  exchange_rows.rs  extract_column.rs  extract_diag.rs  from_basis.rs  from_sab_f64.rs  gemm.rs  givens_theta.rs  id.rs  init_const.rs  into_basis.rs  into_sab.rs  inv.rs  inv_diag.rs  inv_lower_triangular.rs  inv_upper_triangular.rs  is_diag.rs  is_diagonally_dominant.rs  is_identity.rs  is_lower_hessenberg.rs  is_lower_triangular.rs  is_permutation.rs  is_symmetric.rs  is_upper_hessenberg.rs  is_upper_triangular.rs  lower_hessenberg.rs  lps.rs  lu.rs  p_compact.rs  partition.rs  (+22 more)
src/utils/: strassen.rs  wasm_memory.rs  workers.rs
