[package]
name = "grassmann"
version = "0.1.0"
authors = ["IG-88-2 <anatoly.strashkevich@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
num = "0.3.1"
num-traits = "0.2.14"
num_cpus = "1.13.0"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
wasm-bindgen-test = "0.3.20"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
byteorder = "1.4.2"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "Navigator",
  "ImageData",
  "WebGlTexture",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "Worker",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'WebGl2RenderingContext',
  'WebGlRenderbuffer',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'WebGlBuffer',
  'WebGlShader',
  'WebGlProgram',
  'Window',
  'Performance',
  'PerformanceTiming'
]
